--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "files.associations": {
         "list.h": "c",
-        "listas-pruebas.h": "c"
+        "listas-pruebas.h": "c",
+        "string.h": "c",
+        "pthread.h": "c",
+        "socket.h": "c",
+        "utils.h": "c",
+        "unistd.h": "c",
+        "stdlib.h": "c"
     }
 }
