--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "string_view": "c",
         "initializer_list": "c",
         "utility": "c",
-        "numbers": "c"
+        "numbers": "c",
+        "listas-pruebas2.h": "c"
     }
 }
