mmapeando 1ra parte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
         "numbers": "c",
         "listas-pruebas2.h": "c",
         "cliente.h": "c",
-        "bitarray-prueba.h": "c"
+        "bitarray-prueba.h": "c",
+        "math.h": "c",
+        "mman.h": "c"
     }
 }
